# Ava2

./: 2164芯片介绍.docx  CMakeLists.txt  Chip2164.c  Chip2164.h  README.md  Test6.txt  Test6_Output.txt  Test7.txt  Test7_zhushi.txt  address.c  address.h  biu.c  biu.h  chip8255.c  chip8255.h  cpu.c  cpu.h  eu.c  eu.h  input.txt  instruction.c  instruction.h  main.c  test5.c  test5.h  期末作业运行结果.txt  运行结果.txt
